# SFML-2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Engine/include/: Collision.h  Input.h  Object.h  Sprite.h  TextureManager.h  missing_fix.h
Tasks/: Engine.md  Game.md  Tasks.md
include/: Fireball.h  Game.h  Player.h  Window.h
src/: Fireball.cpp  Game.cpp  Player.cpp  Window.cpp  main.cpp
